--- a/styles/bio.css
+++ b/styles/bio.css
@@ -783,8 +783,8 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 2.5rem;
-  width: 15%;
+  height: 2.25rem;
+  width: 2.25rem;
   border-radius: 50%;
   margin: 0.5rem;
   margin-top: 2rem;
@@ -792,14 +792,14 @@ a {
 }
 @media (min-width: 768px) {
   .form__avatar {
-    height: 4rem;
-    width: 10%;
+    height: 3rem;
+    width: 3rem;
   }
 }
 @media (min-width: 1280px) {
   .form__avatar {
-    height: 4rem;
-    width: 10%;
+    height: 3rem;
+    width: 3rem;
   }
 }
 .form__img {
@@ -984,8 +984,8 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 2.5rem;
-  width: 15%;
+  height: 2.25rem;
+  width: 2.25rem;
   border-radius: 50%;
   margin: 0.5rem;
   margin-top: 1rem;
@@ -993,14 +993,14 @@ a {
 }
 @media (min-width: 768px) {
   .comment__avatar {
-    height: 4rem;
-    width: 10%;
+    height: 3rem;
+    width: 3rem;
   }
 }
 @media (min-width: 1280px) {
   .comment__avatar {
-    height: 4rem;
-    width: 10%;
+    height: 3rem;
+    width: 3rem;
   }
 }
 .comment__img {
