--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -318,20 +318,20 @@ a{
     display: flex;
     align-items: center;
     justify-content: center;
-    height:2.5rem;
-    width:15%;
+    height:2.25rem;
+    width:2.25rem;
     border-radius: 50%; 
     margin:0.5rem;
     margin-top: 2rem;
     background-color: #E1E1E1;
 
     @include tablet{
-      height:4rem;
-      width:10%;
+      height:3rem;
+      width:3rem;
     }
     @include desktop{
-      height:4rem;
-      width:10%;
+      height:3rem;
+      width:3rem;
     }
   }
 
@@ -484,20 +484,20 @@ a{
     display: flex;
     align-items: center;
     justify-content: center;
-    height:2.5rem;
-    width:15%;
+    height:2.25rem;
+    width:2.25rem;
     border-radius: 50%;
     margin:0.5rem; 
     margin-top:1rem;
     background-color: #E1E1E1;
 
     @include tablet{
-      height:4rem;
-      width:10%
+      height:3rem;
+      width:3rem;
     }
     @include desktop{
-      height:4rem;
-      width:10%
+      height:3rem;
+      width:3rem;
     }
   }
 
